--- a/css/styles.css
+++ b/css/styles.css
@@ -398,6 +398,7 @@ address
 {
     width: 170px;
     height: 92px;
+    flex-basis: calc((100% - 150px) / 5);
 }
 .client-soc-link 
 {
@@ -419,10 +420,7 @@ address
 {
     fill: #2196F3;
 }
-.team-soc-item
-{
-    flex-basis: calc((100% - 30px) / 5);
-}
+
 .client-soc-icons 
 {
     fill: #AFB1B8;
@@ -435,7 +433,11 @@ address
     padding-top: 60px;
     padding-bottom: 56px;
 }
-
+.footer-container
+{
+    display: flex;
+    gap: 70px;
+}
 
 .list-block
 {
@@ -482,6 +484,54 @@ address
 {
     color: var(--color-blue);
 }
+.just
+{
+
+}
+.doit
+{
+    padding-top: 12px;
+    padding-bottom: 20px;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 16px;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #FFFFFF;
+}
+.doit-list 
+{
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+
+}
+.doit-soc-item
+{
+    width: 44px;
+    height: 44px;
+    flex-basis: calc((100% - 30px) / 4);
+}
+.doit-soc-link 
+{
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    background-color: rgba(255, 255, 255, 0.1);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.doit-soc-link:hover, .doit-soc-link:focus
+{
+    background-color: #2196F3;
+}
+
+.doit-soc-icons 
+{
+    fill: #ffff;
+}
+
 
 .footer-contacts
 {
@@ -582,4 +632,5 @@ address
     letter-spacing: 0.03em;
     color: var(--color-gray)
 }
+
 
