--- a/css/styles.css
+++ b/css/styles.css
@@ -157,6 +157,7 @@ address
 }
 
 .header-contacts-core:hover
+.header-contacts-core:focus
 {
     color: #2196F3;
 }
@@ -189,6 +190,7 @@ address
     url(../images/Imghero1.jpg);
     background-repeat: no-repeat;
     background-position: center;
+    background-size: cover;
     margin-left: auto;
     margin-right: auto;
 
@@ -268,6 +270,7 @@ address
 {
     margin-bottom: 30px;
     padding: 25px 100px;
+    border-radius: 4px;
     background-color: #F5F4FA;
 }
 .feature-title 
@@ -398,10 +401,7 @@ address
 {
     margin-bottom: 0;
 }
-.client
-{
-    margin-bottom: 50px;
-}
+
 .client-list 
 {
     display: flex;
@@ -410,7 +410,6 @@ address
 }
 .client-soc-group 
 {
-    width: 170px;
     height: 92px;
     flex-basis: calc((100% - 150px) / 5);
 }
@@ -418,7 +417,6 @@ address
 {
     width: 100%;
     height: 100%;
-    padding: 16px 32px;
     border: 1px solid #AFB1B8;
     border-radius: 4px;
     display: flex;
@@ -451,6 +449,7 @@ address
 {
     display: flex;
     gap: 70px;
+    align-items: baseline;
 }
 
 .list-block
@@ -501,8 +500,7 @@ address
 
 .doit
 {
-    padding-top: 12px;
-    padding-bottom: 20px;
+    margin-bottom: 20px;
     font-weight: 700;
     font-size: 14px;
     line-height: 16px;
@@ -585,6 +583,7 @@ address
     background: #F5F4FA;
     border-radius: 4px;
     border: none;
+    cursor: pointer;
     color: var(--color-black)
 
 }
@@ -607,19 +606,16 @@ address
 }
 .item-portfolio
 {
+    text-decoration: none;
     flex-basis: calc((100% - 60px) / 3);
 }
 .item-portfolio:hover
 {
+    display: block;
     box-shadow: 0px 1px 1px
     rgba(0, 0, 0, 0.12),
     0px 4px 4px 
     rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-}
-.img-block
-{
-    width: 370px;
-    height: 294px;
 }
 
 .border-portfolio
