--- a/css/styles.css
+++ b/css/styles.css
@@ -181,7 +181,7 @@ address
 
 .hero 
 {    
-    width: 1600px;
+    max-width: 1600px;
     padding-top: 200px;
     padding-bottom: 200px;
     background-image: linear-gradient(
@@ -268,8 +268,11 @@ address
 }
 .features-item
 {
+    height: 120px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     margin-bottom: 30px;
-    padding: 25px 100px;
     border-radius: 4px;
     background-color: #F5F4FA;
 }
